--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <h1>Pothula Bharath</h1>
         <p>Full Stack Developer</p>
       </div>
-      <img src="bharath.jpg" alt="Profile Pic">
+      <img src="bharath.jpg" alt="Profile Pics">
     </div>
 
     <section>
@@ -92,9 +92,9 @@
 
     <section>
       <h2>📞 Contact</h2>
-      <p>Email: <a href="mailto:you@example.com">you@example.com</a></p>
-      <p>GitHub: <a href="https://github.com/yourusername" target="_blank">yourusername</a></p>
-      <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">linkedin.com/in/yourprofile</a></p>
+      <p>Email: <a href="mailto:bharathkkledu@gmail.com">bharathkkledu@gmail.com</a></p>
+      <p>GitHub: <a href="https://github.com/Bharathpothula205/" target="_blank">bharath's Github</a></p>
+      <p>LinkedIn: <a href="https://www.linkedin.com/in/bharath-p-993622298/" target="_blank">linkedin.com/in/bharath's Linkedin</a></p>
     </section>
   </div>
 </body>
