--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <h2>📞 Contact</h2>
       <p>Email: <a href="mailto:bharathkkledu@gmail.com">bharathkkledu@gmail.com</a></p>
       <p>GitHub: <a href="https://github.com/Bharathpothula205/" target="_blank">bharath's Github</a></p>
-      <p>LinkedIn: <a href="https://www.linkedin.com/in/bharath-p-993622298/" target="_blank">linkedin.com/in/bharath's Linkedin</a></p>
+      <p>LinkedIn: <a href="https://www.linkedin.com/in/bharath-p-993622298/" target="_blank">bharath's Linkedin</a></p>
     </section>
   </div>
 </body>
